# 添加子项目
IF (MSVC)
    # 添加子项目
    add_subdirectory(gaeactor-comm)
    add_subdirectory(gaeactor-transmit)
    add_subdirectory(gaeactor-environment)
    add_subdirectory(gaeactor-environment-ex)
    add_subdirectory(gaeactor-event-engine)
    add_subdirectory(gaeactor-auditions)
    add_subdirectory(gaeactor-interactions)
    add_subdirectory(gaeactor-agent-sensors)
    add_subdirectory(gaeactor-agent-cores)
    add_subdirectory(gaeactor)
    add_subdirectory(gaeactor-engine)
    add_subdirectory(gaeactor-record)
    add_subdirectory(gaeactor-test)
    add_subdirectory(gaeactor-tools)
    add_subdirectory(gaeactor-viewer)
    add_subdirectory(gaeactor-display)
    add_subdirectory(gaeactor-benchmark)
    add_subdirectory(gaeactor-comm-test)
    add_subdirectory(TierAirlineAirPortSimulation)
    add_subdirectory(gaeactor-presentation-test)
    add_subdirectory(gaeactor-presentation-test3)
    add_subdirectory(gaeactor-presentation-test4)
    add_subdirectory(gaeactor-presentation-test5)
    add_subdirectory(gaeactor-presentation-test6)
    # add_subdirectory(gaeactor-presentation-test8)

    ####################################################################################################################################################
    add_dependencies(gaeactor-comm gaeactor-utils gaeactor-utils-location)
    add_dependencies(gaeactor-environment gaeactor-comm)
    add_dependencies(gaeactor-environment-ex gaeactor-comm)   
    add_dependencies(gaeactor-agent-cores gaeactor-environment gaeactor-event-engine)
    add_dependencies(gaeactor-agent-sensors gaeactor-environment gaeactor-event-engine)
    add_dependencies(gaeactor-interactions gaeactor-environment)
    add_dependencies(gaeactor-auditions gaeactor-environment)
    add_dependencies(gaeactor-event-engine gaeactor-environment)
    add_dependencies(gaeactor-viewer gaeactor-environment gaeactor-agent-cores gaeactor-agent-sensors gaeactor-interactions gaeactor-auditions gaeactor-event-engine)
    add_dependencies(gaeactor-test gaeactor-transmit)
    add_dependencies(gaeactor-comm-test gaeactor-transmit)
    add_dependencies(gaeactor-benchmark gaeactor-transmit  gaeactor gaeactor-engine)
    add_dependencies(gaeactor-engine gaeactor-transmit gaeactor)
    add_dependencies(LaViCDesktop gaeactor-transmit)
    add_dependencies(gaeactor-record gaeactor-transmit)
    add_dependencies(gaeactor-transmit gaeactor-comm)
    add_dependencies(gaeactor gaeactor-environment gaeactor-agent-cores gaeactor-agent-sensors gaeactor-interactions gaeactor-auditions gaeactor-event-engine gaeactor-transmit)
    add_dependencies(TierAirlineAirPortSimulation gaeactor-transmit)
ELSE()
    # 添加子项目
    add_subdirectory(gaeactor-comm)
    add_subdirectory(gaeactor-transmit)
    add_subdirectory(gaeactor-environment)
    add_subdirectory(gaeactor-environment-ex)
    add_subdirectory(gaeactor-event-engine)
    add_subdirectory(gaeactor-auditions)
    add_subdirectory(gaeactor-interactions)
    add_subdirectory(gaeactor-agent-sensors)
    add_subdirectory(gaeactor-agent-cores)
    add_subdirectory(gaeactor)
    add_subdirectory(gaeactor-record)
    add_subdirectory(gaeactor-test)
    add_subdirectory(gaeactor-viewer)
    add_subdirectory(gaeactor-comm-test)
    add_subdirectory(TierAirlineAirPortSimulation)
    ####################################################################################################################################################
    add_dependencies(gaeactor-comm gaeactor-utils gaeactor-utils-location)
    add_dependencies(gaeactor-environment gaeactor-comm)
    add_dependencies(gaeactor-environment-ex gaeactor-comm)   
    add_dependencies(gaeactor-agent-cores gaeactor-environment gaeactor-event-engine)
    add_dependencies(gaeactor-agent-sensors gaeactor-environment gaeactor-event-engine)
    add_dependencies(gaeactor-interactions gaeactor-environment)
    add_dependencies(gaeactor-auditions gaeactor-environment)
    add_dependencies(gaeactor-event-engine gaeactor-environment)
    add_dependencies(gaeactor-viewer gaeactor-environment gaeactor-agent-cores gaeactor-agent-sensors gaeactor-interactions gaeactor-auditions gaeactor-event-engine)
    add_dependencies(gaeactor-test gaeactor-transmit)
    add_dependencies(gaeactor-comm-test gaeactor-transmit)
    add_dependencies(gaeactor-record gaeactor-transmit)
    add_dependencies(gaeactor-transmit gaeactor-comm)
    add_dependencies(gaeactor gaeactor-environment gaeactor-agent-cores gaeactor-agent-sensors gaeactor-interactions gaeactor-auditions gaeactor-event-engine gaeactor-transmit)
    add_dependencies(TierAirlineAirPortSimulation gaeactor-transmit)
ENDIF (MSVC)
